<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnLogoutDialog1"
        style="@style/my_custom_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_dialog1"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnLogoutDialog2"
        style="@style/my_custom_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_dialog2"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btnLogoutDialog3"
        style="@style/my_custom_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_dialog3"
        android:textSize="30sp" />

</LinearLayout>