<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAlertDialog"
        style="@style/my_custom_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTimePickerDialog"
        style="@style/my_custom_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timepickerdialog"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAlertDialog" />

    <Button
        android:id="@+id/btnDatePickerDialog"
        style="@style/my_custom_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/datepickerdialog"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTimePickerDialog" />
    <Button
        android:id="@+id/btnLogoutDialog"
        style="@style/my_custom_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logoutdialog"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTimePickerDialog" />



</androidx.constraintlayout.widget.ConstraintLayout>